# idmefv2-log-generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: add-tag-latest.yml  pylint.yml  python-publish.yml
examples/: list3.yaml  list4.yaml  list5.yaml
examples/templates/: test1.j2
idmefv2/generator/: __main__.py  funs.py  player.py  playlist.py  playlist_test.py
idmefv2/generator/examples/: list1.yaml  list2.yaml  list3.yaml  list4.yaml  list5.yaml  suricata1.yaml
idmefv2/generator/templates/: suricata1.j2  test1.j2  test2.j2
idmefv2/generator/tests/: playlist_test.py
